# elastica-model

./: .gitignore  README.md  boundary_only.py  el3.f90  initial_data_generation.auto  master_loop_parallel.py  symmetric_run_labels_NPR.auto
Data Generation/: bridge.py  master_loop_parallel.py  master_loop_single_thread.py
Mesh Generation/: cgal_afm.cpp  cgal_hole_filling.cpp
elastica_model_pkg/: README.md  pyproject.toml
elastica_model_pkg/docs/_build/html/: .buildinfo  about.html  elastica_model.html  genindex.html  index.html  installation.html  objects.inv  py-modindex.html  quickstart.html  search.html  searchindex.js
elastica_model_pkg/docs/_build/html/.doctrees/: about.doctree  elastica_model.doctree  environment.pickle  index.doctree  installation.doctree  quickstart.doctree
elastica_model_pkg/docs/_build/html/_downloads/1843905db2f39b6298740ea169f2a233/: Auto-07p installation steps for WIndows.docx
elastica_model_pkg/docs/_build/html/_modules/: index.html
elastica_model_pkg/docs/_build/html/_modules/elastica_model/: generation.html  loop.html
elastica_model_pkg/docs/source/: about.rst  conf.py  elastica_model.rst  index.rst  installation.rst  quickstart.rst
elastica_model_pkg/docs/source/_images/: elastica_variables.wmf
elastica_model_pkg/elastica_model/: __init__.py  cli.py  config.py  generation.py  loop.py  parsing.py  plotting.py  setup_config.py
elastica_model_pkg/elastica_model/data/: initial_data_generation.auto  only_boundary.auto  restart.auto
initial data generation/: api_initial_data.py  automated_parsing.py  c.el3  (+1 more)
(+30 files in other folders)
